[package]
name = "bacrama-tournaments"
version = "0.1.0"
readme = "README.md"
repository = "https://github.com/Uastamasta-ASD/Tournaments"
license = "Apache-2.0"
edition = "2021"
publish = false

[dependencies]
itertools = "0.14.0"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.7"
