[package]
name = "bacrama-tournaments"
version = "1.0.0"
readme = "README.md"
repository = "https://github.com/Uastamasta-ASD/Tournaments"
license = "Apache-2.0"
edition = "2021"
publish = false

[dependencies]
itertools = "0.14.0"
rand = "0.8.5"
rand_pcg = "0.3.1"
rand_seeder = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
indexmap = "2.7.0"
thiserror = "2.0.7"

[dev-dependencies]
serde_json = "1.0"
